# OS_labs

./: README.md
lab1/: build.sh  config.cfg  daemon.cpp  daemon.h  main.cpp
lab2/: .gitignore  CMakeLists.txt  README.md
lab2/client/: client.cpp  goat.cpp  goat.h
lab2/conn/: conn_fifo.cpp  conn_mq.cpp  conn_seg.cpp
lab2/host/: client_info.h  host.cpp  wolf.cpp  wolf.h
lab2/interfaces/: conn.h  member.h  message.h
lab2/utils/: utils.cpp  utils.h
lab3/: .gitignore  CMakeLists.txt  README.md  makefile
lab3/interfaces/: config.h  limit.h  limit.hpp  set.h  set.hpp  set_lazy.h  set_lazy.hpp  test.h
lab3/src/: config.cpp  main.cpp  test.cpp
